# SplitWrapper

./: README.md  setup.cfg
SplitWrapper/: __init__.py  splitwrapper.py
