[metadata]
name = SplitWrapper
version = attr: SplitWrapper.__version__
description = Python wrapper for LiveSplit split files.
url = https://github.com/Minibeast/SplitWrapper
author = Ian C
author_email = contact@minibeast.me
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages=find:
